<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/Activity_Main"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_condensed_bold2"
        app:theme="@style/Theme.AppCompat.NoActionBar" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textColor="@color/titleText"/>
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/classes1_TextInputLayout"
        android:layout_below="@id/heading"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="12.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/roboto"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopStart="0dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        >
        <android.support.v7.widget.AppCompatEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/classes1_TextField"
            android:inputType="number"
            android:hint="@string/classes_attended"
            android:fontFamily="@font/roboto"
            /> <requestFocus/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/classes2_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/classes1_TextInputLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopStart="0dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/classes2_TextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/classes_conducted"
            android:inputType="number" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/classes3_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/classes2_TextInputLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopStart="0dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp">

        <android.support.v7.widget.AppCompatEditText

            android:id="@+id/classes3_TextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/desired_percentage"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/classes3_TextInputLayout"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/calculate_button"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/calculate"
            android:elevation="16dp"
            android:background="@drawable/rounded"
            style="@style/Button"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/reset_button"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/rounded"
            android:text="@string/reset"
            android:elevation="16dp"
            style="@style/Button"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Linear"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/Linear"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/box"
            android:fontFamily="@font/roboto_condensed_regular"
            app:fontFamily="@font/roboto_condensed_bold" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Linear"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:paddingTop="10dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:fontFamily="@font/roboto_condensed_regular" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:paddingLeft="10dp" />

</RelativeLayout>